--- a/pater.html
+++ b/pater.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8">
     <title>Түбіртек: {{ apt.id }}</title>
     <style>
-        body { font-family: Arial, sans-serif; font-size: 11px; padding: 20px; }
+        body { font-family: Arial, sans-serif; font-size: 11px; padding: 20px; color: #333; }
         table { width: 100%; border-collapse: collapse; }
-        th, td { border: 1px solid #a3a3a3; padding: 5px; text-align: right; }
-        .header-bg { background: #f0f0f0; text-align: center; }
-        .total-row { background: #ffe082; font-weight: bold; }
-        .pay-btn { background: #27ae60; color: white; padding: 5px 10px; text-decoration: none; border-radius: 4px; }
+        th, td { border: 1px solid #999; padding: 6px; text-align: right; }
+        .header { background: #eee; text-align: center; font-weight: bold; }
+        .total { background: #ffe082; font-weight: bold; }
+        .btn { display: inline-block; padding: 8px 12px; background: #27ae60; color: white; text-decoration: none; border-radius: 4px; margin-top: 10px; }
     </style>
 </head>
 <body>
-    <h3>Желтоқсан 2025 - Түбіртек</h3>
-    <p>Пәтер: <strong>{{ apt.id }}</strong> | Аудан: {{ apt.area }} м² | Дербес шот: {{ apt.account|default:"Бөлінуде" }}</p>
+    <h2>Желтоқсан 2025 — Төлем түбіртегі</h2>
+    <p>Пәтер: <strong>{{ apt.id }}</strong> | Аудан: {{ apt.area }} м²</p>
+    <p>Дербес шот: {{ apt.account|default:"Дербес шот анықталуда" }}</p>
 
     <table>
-        <tr class="header-bg">
-            <td>Қызмет</td>
+        <tr class="header">
+            <td>Қызмет түрі</td>
             <td>Тариф</td>
             <td>Сомасы</td>
         </tr>
         <tr>
-            <td>Үй күтімі</td>
-            <td>{{ apt.auto_rate }}</td>
-            <td>{% widthratio apt.area 1 apt.auto_rate %}</td>
+            <td style="text-align: left;">Үй күтімі (Smart Тариф)</td>
+            <td>{{ apt.auto_rate }} тңг</td>
+            <td>{% widthratio apt.area 1 apt.auto_rate %} тңг</td>
         </tr>
-        <tr class="total-row">
-            <td colspan="2">Төлемге (Итого):</td>
+        <tr class="total">
+            <td colspan="2">Төлемге (Қарызды қосқанда):</td>
             <td>{{ apt.balance }} тңг</td>
         </tr>
     </table>
-    <br>
+
     {% if apt.account %}
-    <a href="https://halykbank.kz/pay/{{ apt.account }}" class="pay-btn">Halyk арқылы төлеу</a>
+    <a href="https://halykbank.kz/pay/{{ apt.account }}" class="btn">Halyk-пен төлеу</a>
     {% endif %}
 </body>
 </html>
